--- a/main.html
+++ b/main.html
@@ -49,13 +49,13 @@
   </head>
   <body>
     <!-- Write your code here -->
-	  <div class = "facebook" id= "left">		  
+	  <div class = "left" id= "left">		  
 		  <img src = "https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt  = "Facebook logo" width="150px" height ="50px">
 		  <p>Facebook helps you connect and share with the people in your life.
 </p>
 	  </div>
 
-	  <div class= "facebook" id = "right">
+	  <div class= "right" id = "right">
 		  <form>
 		  <input type = "text" id = "email" placeholder= "Email address or phone number">
 		  <input type = "password" id = "password" placeholder = "Password">
